# cpp-tdd-template

./: .gitignore  CMakeLists.txt  README.md  post.md
src/: Yatzy.cpp  Yatzy.h  sample.h
test/: sample.test.cpp  yatzy.test.cpp
